Associate with rather than adding/to

--- a/content/cloud-docs/workspaces/settings/run-tasks.mdx
+++ b/content/cloud-docs/workspaces/settings/run-tasks.mdx
@@ -14,7 +14,7 @@ You can manage run tasks through the UI as detailed below or through the [Run Ta
 
 **Terraform Version** - You can only assign run tasks to workspaces that use a Terraform version of 0.12 and later. Downgrading a workspace with existing run tasks to use a prior Terraform version will not result in an error, but Terraform Cloud will no longer trigger the run tasks during plan and apply operations.
 
-**Permissions** - To create a run task, you must have a user account with [organization owner](/cloud-docs/users-teams-organizations/permissions#organization-owners) permissions. To associate run tasks to a workspace, you must be at least a [workspace administrator](/cloud-docs/users-teams-organizations/permissions#workspace-admins).
+**Permissions** - To create a run task, you must have a user account with [organization owner](/cloud-docs/users-teams-organizations/permissions#organization-owners) permissions. To associate run tasks with a workspace, you must be at least a [workspace administrator](/cloud-docs/users-teams-organizations/permissions#workspace-admins).
 
 ## Creating a Run Task
 
@@ -41,7 +41,7 @@ To create a new run task:
 
    ![Screenshot: an organization's populated run tasks state](/img/docs/run-tasks-run-tasks-populated.png)
 
-## Adding Run Tasks to a Workspace
+## Associating Run Tasks with a Workspace
 
 1. Click **Workspaces** in the top navigation bar, click your workspace in the grid, open the **Settings** menu and select **Run Tasks**.
 
