plugin: Adjustments for new framework providerserver package
Reference: https://github.com/hashicorp/terraform-plugin-framework/pull/308

--- a/content/plugin/mux/translating-protocol-version-5-to-6.mdx
+++ b/content/plugin/mux/translating-protocol-version-5-to-6.mdx
@@ -57,7 +57,7 @@ providers := []func() tfprotov6.ProviderServer{
 	upgradedSdkProvider.ProviderServer,
 
 	// Example terraform-plugin-framework provider
-	tfsdk.NewProtocol6ProviderServer(frameworkprovider.New(version)())
+	providerserver.NewProtocol6(frameworkprovider.New(version)())
 }
 
 muxServer, err := tf6muxserver.NewMuxServer(ctx, providers...)
