--- a/content/plugin/framework/acctests.mdx
+++ b/content/plugin/framework/acctests.mdx
@@ -28,7 +28,7 @@ to supply a map of functions that return a
 To get a `tfprotov6.ProviderServer` from a
 [`tfsdk.Provider`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/tfsdk#Provider),
 you need to use the
-[`tfsdk.NewProtocol6ProviderServerWithError`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/tfsdk#NewProtocol6ProviderServerWithError)
+[`providerserver.NewProtocol6WithError`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/tfsdk#NewProtocol6ProviderServerWithError)
 helper. For example:
 
 ```go
@@ -36,7 +36,7 @@ resource.Test(t, resource.TestCase{
 	PreCheck: func() { testAccPreCheck(t) },
 	ProtoV6ProviderFactories: map[string]func() (tfprotov6.ProviderServer, error) {
 		// newProvider is your function that returns a tfsdk.Provider
-		"example_provider": tfsdk.NewProtocol6ProviderServerWithError(newProvider()),
+		"example_provider": providerserver.NewProtocol6WithError(newProvider()),
 	},
 	CheckDestroy: testAccCheckExampleResourceDestroy,
 	Steps: []resource.TestStep{
