--- a/content/plugin/mux/combining-protocol-version-6-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-6-providers.mdx
@@ -67,8 +67,8 @@ func main() {
 	ctx := context.Background()
 	providers := []func() tfprotov6.ProviderServer{
 		// Example terraform-plugin-framework providers
-		tfsdk.NewProtocol6ProviderServer(provider1.New("test")())
-		tfsdk.NewProtocol6ProviderServer(provider2.New("test")())
+		providerserver.NewProtocol6(provider1.New("test")())
+		providerserver.NewProtocol6(provider2.New("test")())
 	}
 
 	muxServer, err := tf6muxserver.NewMuxServer(ctx, providers...)
@@ -109,8 +109,8 @@ resource.Test(t, resource.TestCase{
 			ctx := context.Background()
 			providers := []func() tfprotov6.ProviderServer{
 				// Example terraform-plugin-framework providers
-				tfsdk.NewProtocol6ProviderServer(provider1.New("test")())
-				tfsdk.NewProtocol6ProviderServer(provider2.New("test")())
+				providerserver.NewProtocol6(provider1.New("test")())
+				providerserver.NewProtocol6(provider2.New("test")())
 			}
 
 			muxServer, err := tf6muxserver.NewMuxServer(ctx, providers...)
