plugin: Fix Go documentation link too for providerserver package

--- a/content/plugin/framework/acctests.mdx
+++ b/content/plugin/framework/acctests.mdx
@@ -28,7 +28,7 @@ to supply a map of functions that return a
 To get a `tfprotov6.ProviderServer` from a
 [`tfsdk.Provider`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/tfsdk#Provider),
 you need to use the
-[`providerserver.NewProtocol6WithError`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/tfsdk#NewProtocol6ProviderServerWithError)
+[`providerserver.NewProtocol6WithError`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/providerserver#NewProtocol6WithError)
 helper. For example:
 
 ```go
