Update "queue plan" button text (#2261)
* Update "queue plan" button text

* Use "Start new run" instead

--- a/content/cloud-docs/run/index.mdx
+++ b/content/cloud-docs/run/index.mdx
@@ -63,7 +63,7 @@ Terraform Cloud has three main workflows for managing runs, and your chosen work
 - The [API-driven run workflow](/cloud-docs/run/api), which is more flexible but requires you to create some tooling.
 - The [CLI-driven run workflow](/cloud-docs/run/cli), which uses Terraform's standard CLI tools to execute runs in Terraform Cloud.
 
-You can initiate Terraform Cloud runs through the manual **Start new plan** action in the workspace actions menu, VCS webhooks, the standard `terraform apply` command (with the CLI integration configured), and [the Runs API](/cloud-docs/api-docs/run) (or any tool that uses that API).
+You can initiate Terraform Cloud runs through the manual **Start new run** action in the workspace actions menu, VCS webhooks, the standard `terraform apply` command (with the CLI integration configured), and [the Runs API](/cloud-docs/api-docs/run) (or any tool that uses that API).
 
 ## Plans and Applies
 
