--- a/content/cloud-docs/api-docs/run-tasks.mdx
+++ b/content/cloud-docs/api-docs/run-tasks.mdx
@@ -44,7 +44,7 @@ Refer to [run tasks Integration](/cloud-docs/api-docs/run-tasks-integration) for
 
 ## Required Permissions
 
-To interact with run tasks on an organization, you need the [Manage Run Tasks permission](/cloud-docs/users-teams-organizations/permissions#manage-run-tasks). To associate or dissociate run tasks in a workspace, you need the [Manage Run Task Associations permission](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) on that particular workspace.
+To interact with run tasks on an organization, you need the [Manage Run Tasks permission](/cloud-docs/users-teams-organizations/permissions#manage-run-tasks). To associate or dissociate run tasks in a workspace, you need the [Manage Workspace Run Tasks permission](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) on that particular workspace.
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
